FileReader added json