@@ -1,12 +1,11 @@
 import java.io.IOException;
+import java.util.Arrays;
 
 public class WebsiteOpener {
     private static WebsiteOpener instance;
 
-    // Private constructor to prevent instantiation
     private WebsiteOpener() {}
 
-    // Public method to provide access to the single instance
     public static WebsiteOpener getInstance() {
         if (instance == null) {
             instance = new WebsiteOpener();
@@ -16,7 +15,9 @@ public class WebsiteOpener {
 
     public void openWebsite(String url) {
         try {
-            Runtime.getRuntime().exec("cmd /c start chrome " + url);
+            ProcessBuilder builder = new ProcessBuilder();
+            builder.command(Arrays.asList("cmd.exe", "/c", "start", "chrome", url));
+            builder.start();
         } catch (IOException e) {
             e.printStackTrace();
         }
